# Pusula_Fatma_Zehra_Tonga

./: LICENSE  README.md
Pusula_Fatma_Zehra_Tonga/: LICENSE  README.md  pyproject.toml  requirements.txt
Pusula_Fatma_Zehra_Tonga/data/processed/: Talent_Academy_Case_DT_2025_cleaned.xlsx
Pusula_Fatma_Zehra_Tonga/notebook/: main_eda_analysis.ipynb
